test/invalid-semantics/60294_while_not_bool/while_not_bool.mag
-- Author: 60294, Pedro Rosa
fun main (_): Unit -> Unit = 
    while 1 do unit